@@ -1,7 +1,7 @@
 <Project name="Mono.Addins" fileversion="2.0" language="C#" clr-version="Net_1_1" ctype="DotNetProject">
   <Configurations active="Default">
     <Configuration name="Default" ctype="DotNetProjectConfiguration">
-      <Output directory="../bin" assembly="Mono.Addins.dll" />
+      <Output directory="../bin" signAssembly="True" assemblyKeyFile="../mono-addins.snk" assembly="Mono.Addins.dll" />
       <Build debugmode="True" target="WinExe" />
       <Execution runwithwarnings="True" consolepause="False" runtime="MsNet" clr-version="Net_1_1" />
       <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="Mono.Addins.Database.SetupProcess" generatexmldocumentation="False" win32Icon="./" ctype="CSharpCompilerParameters" />
